# OpenGothic

./: .gitignore  CMakeLists.txt  Gothic.ini  connect_opengothic_split.sh  connect_opengothic_split_tools.sh  connect_opengothic_split_tools_updated.sh  log.txt  wynik_code.txt  wynik_gothic_mmo_ch1_clean_schema.txt  wynik_llm.txt  wynik_tools.txt  z_uruchamianie.txt
game/: camera.cpp  commandline.cpp  commandline.h  gothic.cpp  gothic.h  main.cpp  mainwindow.cpp
llm/: README.md  code-map.md  data-model.md  dump-analysis-g2-newworld.md  implementation-playbook.md  production-db-target.md  roadmap.md  runtime-sqlite-roadmap.md  task-brief.md
logs/: itms.txt  npcs.txt  npcs_as_items.txt
runtime/: mmo_server_bootstrap_snapshot.json  mmo_server_bootstrap_snapshot_manifest.json
server/cpp/: CMakeLists.txt  mmo_server_identity.h  mmo_server_snapshot_limits.h  mmo_server_types.h  mmo_udp_server.cpp
tools/: apply_mmo_step103_db_checkpoint_export_coverage.py  apply_mmo_step104_db_checkpoint_script_state_full_export.py  apply_mmo_step51_authority_gap_procedures.py  apply_mmo_step55_live_receiver_bridge.py  apply_mmo_step56b_clean_db_progress_bridge.py  apply_mmo_step59_clean_db_item_interactive_progress_bridge.py  apply_mmo_step60_clean_db_equipment_bridge.py  apply_mmo_step67_interactive_use_bridge.py  apply_mmo_step68_drop_loot_inventory_bridge.py  apply_mmo_step83_combat_lifecycle_bridge.py  apply_mmo_step84_world_identity_lifecycle_bridge.py  apply_mmo_step92_identity_admin_views.py  apply_mmo_step93_save_checkpoint_quest_utf8_bridge.py  audit_runtime_sqlite.py  (+113 more)
(+270 files in other folders)
